24/12/2011

Fixed issue with nested arrays ('foo' ('bar') 'baz').
Fixed issue relating to basicSize. There is an associated issue with iterating through arrays.
I have not tested if this fix also fixes that issue.
Added size for non-indexed objects.

23/12/2011

Modified Maven pom to have a "no-tests" profile for convenience that
skips the JUnit-based tests and the Smalltalk-based tests.

21/12/2011

Finished Objects and Protocols Document.

20/12/2011

Added notNil to UndefinedObject as resolution of raised issue.
Fixed typo in Object.st at:put: - value should have been anObject
Fixed Object hash. Issue 52.

19/12/2011

Changes to array handling as part of issue logged against isKindOf: 

18/12/2011

Added to list of classes and protocols.

17/12/2011

Modified stout launcher to follow same process as stic launcher.
Added List of Classes to be adopted and implemented.
Started List of protocol for each of these classes that needs to
be implemented.
Fixing variable resolution within nested blocks to walk up the chain
of outer receivers looking for the variable.
Implementing the base initialization of the Character class.
Added new primitive to construct Character instances with the proper Java Character.

16/12/2011

Modified HelloWorld example to be just hello world, and moved assert example into 
AssertExample.st

15/12/2011

Revamped the *nix version of stic. Enables use of Redline from anywhere on your machine.
Just 'install', export REDLINE_HOME and add REDLINE_HOME/bin to your path.

14/12/2011

Added support of non-local returns for blocks with ^ in them.
Fixing path separator bug in Maven pom that affects Windows hosts.

11/12/2011

Adding detection of blocks with ^ returns in them.

10/12/2011 

Added support for nested nested blocks.

09/12/2011

Added BlockAnalyser delegate to cater for nest block parsing correctly.
Added stack of block analysers to handle nested, nested blocks.

05/12/2011
