@@ -1,3 +1,9 @@
+25/12/2001
+
+Added support for subclass:instanceVariableNames:classVariableNames:poolDictionaries:
+*Note, need support for classInstanceVariableNames.
+Fixed string with nested ''
+
 24/12/2011
 
 Fixed issue with nested arrays ('foo' ('bar') 'baz').
